Add data summary and data table links to brushed area

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -270,8 +270,11 @@
         <div id="goto">
             <a href="scatterplot.html">See Pair Plots</a>
         </div>
-        <div id="goto-viewData">
-            <a href="viewdata.html">Datatable</a>
+        <div id="goto-viewData" class="brushed-graph-link">
+            <a href="viewdata.html">Data table</a>
+        </div>
+        <div id="goto-dataSummery" class="brushed-graph-link">
+            <a href="viewdatasummary.html">Data Summery</a>
         </div>
     </div>
 </div>
