--- a/visualization/index.html
+++ b/visualization/index.html
@@ -256,11 +256,8 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">View Network graph</a>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="popupGo()">View Scatterplot Matrix</a>
+                            <a class="nav-link" href="#" onclick="goToPairPlotsGraph()">View Scatterplot Matrix</a>
                         </li>
                     </ul>
                 </div>
@@ -301,22 +298,4 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
 <script src="js/renderNetworkGraph.js"></script>
 </body>
-<script>
-    $('[data-toggle="popover"]').popover({
-        title: 'View Options',
-        content: '<a href="scatterplot.html">View ScatterPlot Matrix</a><br><a href="viewdata.html">View Data As Table</a> <br><a href="viewdatasummary.html">View Data</a>',
-        html: true
-    })
-
-    $(document).ready(function(){
-        console.log("hellooo");
-        if(!window.location.href.split('/').pop().includes("fromPairPlots=True")){
-            localStorage.removeItem("brushedSigns");
-            localStorage.removeItem('constraints');
-            localStorage.removeItem('filters');
-
-        }
-    });
-
-</script>
 </html>
