--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -87,10 +87,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#" onclick="popupGo()">View Network graph</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="popupGo()">View Scatterplot Matrix</a>
+                            <a class="nav-link" href="#" onclick="goToNetworkGraph()">View Network graph</a>
                         </li>
                     </ul>
                 </div>
@@ -99,10 +96,10 @@
 
 
     <div id="graph-box">
-
-        <div id="goto">
-            <a href="index.html">See Network Graph</a>
+        <div id="goto" >
+            <button type="button" class="btn btn-light" id="click-me" data-trigger="click" data-toggle="popover">View Options</button>
         </div>
+
         <svg id='plt'></svg>
 
     </div>
