Final set of changes to teh popover. Boom!

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -264,8 +264,8 @@
             </div>
         </nav>
         <svg id='viz'></svg>
-        <div id="goto" >
-            <button type="button" class="btn btn-light" id="click-me" data-trigger="click" data-toggle="popover">View Options</button>
+        <div id="goto">
+            <a type="button" class="btn btn-light" id="click-me" data-trigger="click" data-toggle="popover">View Options</a>
         </div>
     </div>
 </div>
