--- a/visualization/index.html
+++ b/visualization/index.html
@@ -23,36 +23,7 @@
 </head>
 
 <!-- filesaver -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
-
-<script type="text/javascript">
-
-    function updateSliderText(value, domClassName) {
-        let prevText = ($("." + domClassName).text()).split(":")[0];
-        $("." + domClassName).text(prevText + ":" + value)
-                              .css({ 'font-weight': 'bold' });
-    }
-    $(document).ready(function () {
-        $("#signDataList").hide();
-
-        $("#sidebar").mCustomScrollbar({
-            theme: "minimal"
-        });
-
-        $('#dismiss').on('click', function () {
-            $('#sidebar').removeClass('active');
-            $('.sidebar-overlay').removeClass('active');
-        });
-
-        $('#sidebarCollapse').on('click', function () {
-            $('#sidebar').addClass('active');
-            $('.sidebar-overlay').addClass('active');
-            $('.collapse.in').toggleClass('in');
-            $('a[aria-expanded=true]').attr('aria-expanded', 'false');
-        });
-
-    });
-</script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
 
 <body >
 <!-- middle visual container -->
