--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -87,7 +87,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#" onclick="goToNetworkGraph()">View Network graph</a>
+                            <a class="nav-link" href="#" onclick="goToNetworkGraph()">View Network Graph</a>
                         </li>
                     </ul>
                 </div>
