Fixes json loading earlier sometimes

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -252,6 +252,7 @@
         </nav>
         <svg id='viz'></svg>
         <div id="goto">
+<!--            <a onclick="resetBrush()">Clear Brush</a>-->
             <a type="button" class="btn btn-light" id="click-me" data-trigger="click" data-toggle="popover">View Options</a>
         </div>
     </div>
