--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -96,7 +96,8 @@
 
 
     <div id="graph-box">
-        <div id="goto" >
+        <div id="goto">
+<!--            <a onclick="">Clear Brush</a>-->
             <button type="button" class="btn btn-light" id="click-me" data-trigger="click" data-toggle="popover">View Options</button>
         </div>
 
