Remove IntroJS and make See Tutorial button link to instructions on asl-lex.org

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -48,7 +48,7 @@
 <!--                </a>-->
 <!--            </li>-->
 
-            <button type="button" id="showTutorial" class="reset small-sidebar-button btn-left" onclick="reset()">
+            <button type="button" id="showTutorial" class="reset small-sidebar-button btn-left" onclick="openTutorial()">
                 See Tutorial
                 <i class="fas fa-info-circle" id="seeTutorialInfo"></i>
             </button>
