Make proof of concept for using SweetAlert when leaving page to show tutorial

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -19,6 +19,7 @@
     <script src="js/intro.js/intro.js"></script>
     <link rel="stylesheet" href="js/intro.js/introjs.css">
     <script src="//kit.fontawesome.com/0599fddd3a.js" crossorigin="anonymous"></script>
+    <script src="//unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </head>
 
