Update tutorial popup spacing

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -285,8 +285,13 @@
                 </button>
             </div>
             <div class="modal-body modal-body-custom">
-                <div class="centered-in-model large-modal-text">Please click on the INSTRUCTIONS tab once you are on asl-lex.org</div>
-                <div class="centered-in-model"><img id="tutorialGif" src="GIF.gif"></div>
+                <div class="centered-in-model large-modal-text">
+                    <p class="centered-text">You will be taken to an external page to see a tutorial.</p>
+                    <p class="centered-text">Please click on the INSTRUCTIONS tab once you are there.</p>
+                </div>
+                <div class="centered-in-model">
+                    <img id="tutorialGif" src="GIF.gif">
+                </div>
             </div>
             <div class="modal-footer modal-footer-custom">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="openTutorial()">Ok</button>
