--- a/visualization/index.html
+++ b/visualization/index.html
@@ -254,10 +254,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">View Network graph</a>
+                            <a class="nav-link" href="#">View Network</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="popupGo()">View Scatterplot Matrix</a>
+                            <a class="nav-link" href="#" onclick="popupGo()">View Scatterplots</a>
                         </li>
                     </ul>
                 </div>
