Standardize font in sidebar

--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -60,7 +60,7 @@
             </li><br>
 
             <li>
-                <a href="#" onclick="reset()" class="reset">Reset Graph</a><br>
+                <a href="#" onclick="reset()" class="standardized-button">Reset Graph</a><br>
             </li>
 
             <ul id="signDataHoverMainHolder" class="list-unstyled ">
