Add loader to tooltip popup. Rename tutorial gif.

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -264,7 +264,7 @@
                     <p class="centered-text standard-label-text">Please click on the INSTRUCTIONS tab once you are there.</p>
                 </div>
                 <div class="centered-in-model">
-                    <img id="tutorialGif" src="GIF.gif">
+                    <img id="tutorialGif" src="tutorial_demo.gif">
                 </div>
             </div>
             <div class="modal-footer modal-footer-custom">
