--- a/visualization/index.html
+++ b/visualization/index.html
@@ -219,7 +219,6 @@
                 </button>
                 <button type="button" id="resetGraph" class="btn btn-info outer-button tutorial-button showTutorial standard-label-text" onclick="reset()">
                     Reset Graph
-<!--                    Show Tutorial-->
                 </button>
                 <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -241,10 +240,10 @@
         </nav>
         <svg id='viz'></svg>
         <div id="goto">
-            <a href="scatterplot.html standard-label-text">See Pair Plots</a>
+            <a class="standard-label-text standard-label-text-bold" href="scatterplot.html">See Pair Plots</a>
         </div>
         <div id="goto-viewData">
-            <a href="viewdata.html standard-label-text">Datatable</a>
+            <a class="standard-label-text" href="viewdata.html">Datatable</a>
         </div>
     </div>
 </div>
