--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -71,9 +71,6 @@
                     <i class="fa fa-align-left"></i>
                     <span class="standard-label-text">Show Menu</span>
                 </button>
-                <button type="button" id="resetGraph" class="btn btn-info outer-button tutorial-button showTutorial standard-label-text" onclick="reset()">
-                    Reset Plots
-                </button>
                 <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -82,6 +79,11 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
+                        <li class="reset-button-li">
+                            <button type="button" id="resetGraph" class="btn btn-info outer-button reset-button standard-label-text" onclick="reset()">
+                                Reset Plots
+                            </button>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link standard-label-text" href="#" onclick="popupGo()">View Network</a>
                         </li>
