Fix css misplace

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -241,10 +241,10 @@
         </nav>
         <svg id='viz'></svg>
         <div id="goto">
-            <a href="scatterplot.html standard-label-text">See Pair Plots</a>
+            <a href="scatterplot.html" class="standard-label-text">See Pair Plots</a>
         </div>
         <div id="goto-viewData">
-            <a href="viewdata.html standard-label-text">Datatable</a>
+            <a href="viewdata.html" class="standard-label-text">Datatable</a>
         </div>
     </div>
 </div>
